--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
   "minimum-stability": "dev",
   "require": {
     "php": ">=5.4.0",
-    "eznio/ar": "*"
+    "eznio/ar": "*",
+    "eznio/styler": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "~5.0"
